# start-time-estimator

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml
estimate_start_times/: __init__.py  common.py  concurrency_oracle.py  config.py  estimate_start_times.py  event_log_readers.py  main.py  resource_availability.py
estimate_start_times/data_frame/: concurrency_oracle.py  estimate_start_times.py  resource_availability.py
estimate_start_times/event_log/: concurrency_oracle.py  estimate_start_times.py  resource_availability.py
estimate_start_times/test/: concurrency_oracle_test.py  estimate_start_times_test.py  resource_availability_test.py
estimate_start_times/test/assets/: test_event_log_1.csv  test_event_log_2.csv  test_event_log_2.xes  test_event_log_3.csv  (+1 more)
experimentation/: from_csv_to_simod_xes.py  log_preprocessing.py
preprocessing/: analyze.py  transformation.py
processing/: analysis.py  analyze.py  main.py  metrics.py  preprocessing.py  simulation_metrics.py  start_time_metrics.py  transformation.py
src/estimate_start_times/: __init__.py  common.py  concurrency_oracle.py  config.py  estimator.py  event_log_readers.py  event_log_writers.py  main.py  resource_availability.py  utils.py
src/start_time_estimator/: concurrency_oracle.py  config.py  resource_availability.py
tests/: concurrency_oracle_test.py  estimate_start_times_test.py  resource_availability_test.py
tests/assets/: test_event_log_2.csv  test_event_log_3.xes  test_event_log_3_noise.xes  test_event_log_4.csv
(+7 files in other folders)
