[tool.poetry]
name = "start-time-estimator"
version = "1.10.10"
description = "Python package to estimate the enabled time, enabling activity, and resource availability time of each activity instance in an event log."
authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.0"
pix-framework = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
